<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/register_name"
            android:textSize="26dp"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:layout_marginBottom="27dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:layout_marginBottom="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:textColorHint="@color/dark_gray"
            app:startIconTint="@color/dark_gray"
            android:layout_marginBottom="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/baseline_lock_24"
            android:textColorHint="@color/dark_gray"
            app:startIconTint="@color/dark_gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_gray"
            android:layout_marginBottom="36dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/button_signup">
        </Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/dark_gray"
            android:text="Already have an account?" />

        <TextView
            android:id="@+id/txtHyperlinkToLogin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/purple_700"
            android:text="Login here" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>