<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Registration">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <!--<ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/default_profile_image"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_background" />-->



        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:layout_marginBottom="27dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:layout_marginBottom="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:textColorHint="@color/dark_gray"
            app:startIconTint="@color/dark_gray"
            android:visibility="gone"
            android:layout_marginBottom="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/jollibeered"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:text="*If you wish to change your password, just enter new password below."/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:startIconDrawable="@drawable/baseline_lock_24"
            android:textColorHint="@color/dark_gray"
            app:startIconTint="@color/dark_gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_gray"
            android:visibility="gone"
            android:layout_marginBottom="36dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edittext_border"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="Update Profile">
        </Button>


    </LinearLayout>

</FrameLayout>